# yuzu

./: .codespellrc  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  appveyor.yml  license.txt  vcpkg.json
src/: CMakeLists.txt
src/android/: .gitignore  build.gradle  build.gradle.kts  code-style-java.xml  gradle.properties
src/android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
src/audio_core/: CMakeLists.txt  audio_core.cpp  audio_core.h  audio_event.cpp  audio_event.h  audio_in_manager.cpp  audio_in_manager.h  audio_manager.cpp  audio_manager.h  audio_out.cpp  audio_out.h  audio_out_manager.cpp  audio_out_manager.h  audio_render_manager.cpp  audio_render_manager.h  audio_renderer.cpp  audio_renderer.h  behavior_info.cpp  behavior_info.h  buffer.h  codec.cpp  codec.h  command_generator.cpp  command_generator.h  common.h  cubeb_sink.cpp  cubeb_sink.h  delay_line.cpp  delay_line.h  effect_context.cpp  effect_context.h  info_updater.cpp  info_updater.h  memory_pool.cpp  memory_pool.h  mix_context.cpp  mix_context.h  null_sink.h  sdl2_sink.cpp  sdl2_sink.h  (+14 more)
src/audio_core/adsp/: adsp.cpp  adsp.h  mailbox.h
src/audio_core/algorithm/: filter.cpp  filter.h  interpolate.cpp  interpolate.h
src/audio_core/common/: audio_renderer_parameter.h  feature_support.h
src/audio_core/device/: audio_buffer.h  audio_buffers.h  device_session.cpp  device_session.h
src/audio_core/in/: audio_in.cpp  audio_in.h  audio_in_system.cpp  audio_in_system.h
src/audio_core/opus/: decoder.cpp  decoder.h  decoder_manager.cpp  decoder_manager.h  hardware_opus.cpp  (+2 more)
src/citra/: CMakeLists.txt  config.cpp  default_ini.h
src/citra_qt/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  address_space.cpp  address_space.h  address_space.inc  algorithm.h  alignment.h  announce_multiplayer_room.h  assert.cpp  assert.h  atomic_helpers.h  atomic_ops.cpp  atomic_ops.h  binary_find.h  bit_cast.h  bit_field.h  bit_set.h  bit_util.h  bounded_threadsafe_queue.h  cache_management.cpp  cache_management.h  cityhash.h  common_funcs.h  common_paths.h  common_sizes.h  common_types.h  concepts.h  container_hash.h  data_compression.cpp  data_compression.h  demangle.cpp  demangle.h  detached_tasks.cpp  div_ceil.h  dynamic_library.cpp  dynamic_library.h  elf.h  error.cpp  expected.h  fiber.cpp  fiber.h  (+94 more)
src/core/: CMakeLists.txt  announce_multiplayer_session.cpp  announce_multiplayer_session.h  constants.cpp  constants.h  core.cpp  core.h  core_cpu.cpp  core_cpu.h  core_manager.cpp  core_manager.h  core_timing.cpp  core_timing.h  core_timing_util.cpp  core_timing_util.h  cpu_core_manager.cpp  cpu_core_manager.h  cpu_manager.cpp  cpu_manager.h  device_memory.cpp  device_memory.h  device_memory_manager.h  device_memory_manager.inc  gpu_dirty_memory_manager.h  guest_memory.h  hardware_interrupt_manager.cpp  hardware_interrupt_manager.h  hardware_properties.h  host_timing.cpp  host_timing.h  memory.cpp  memory.h  memory_hook.cpp  memory_hook.h  memory_setup.h  perf_stats.cpp  perf_stats.h  precompiled_headers.h  reporter.cpp  reporter.h  (+4 more)
src/dedicated_room/: CMakeLists.txt  yuzu-room.cpp  yuzu-room.rc  yuzu_room.cpp
src/frontend_common/: CMakeLists.txt  config.cpp  config.h  content_manager.h
src/hid_core/: CMakeLists.txt  hid_result.h  hid_types.h  hid_util.h  resource_manager.cpp  resource_manager.h
src/input_common/: CMakeLists.txt  analog_from_button.cpp  input_engine.cpp  input_engine.h  input_mapping.cpp  input_mapping.h  input_poller.cpp  input_poller.h  keyboard.cpp  main.cpp  main.h  motion_emu.cpp  motion_from_button.cpp  motion_input.cpp  motion_input.h  precompiled_headers.h  settings.cpp  settings.h  touch_from_button.cpp  touch_from_button.h
src/network/: CMakeLists.txt  network.cpp  network.h  packet.cpp  packet.h  room.cpp  room.h  room_member.cpp  room_member.h  verify_user.cpp  verify_user.h
src/shader_recompiler/: CMakeLists.txt  environment.h  exception.h  file_environment.cpp  file_environment.h  host_translate_info.h  main.cpp  object_pool.h  precompiled_headers.h  profile.h  program_header.h  recompiler.cpp  recompiler.h  runtime_info.h  shader_info.h  stage.h  varying_state.h
src/tests/: CMakeLists.txt  tests.cpp
src/video_core/: CMakeLists.txt  buffer_cache.h  cdma_pusher.cpp  cdma_pusher.h  command_processor.cpp  command_processor.h  compatible_formats.cpp  compatible_formats.h  const_buffer_accessor.cpp  const_buffer_accessor.h  dirty_flags.cpp  dirty_flags.h  dma_pusher.cpp  dma_pusher.h  fence_manager.h  framebuffer_config.h  gpu.cpp  gpu.h  gpu_asynch.cpp  gpu_asynch.h  gpu_synch.cpp  gpu_synch.h  gpu_thread.cpp  gpu_thread.h  guest_driver.cpp  guest_driver.h  guest_memory.h  invalidation_accumulator.h  macro_interpreter.cpp  macro_interpreter.h  memory_manager.cpp  memory_manager.h  morton.cpp  morton.h  query_cache.h  rasterizer_accelerated.cpp  rasterizer_accelerated.h  rasterizer_cache.h  rasterizer_download_area.h  rasterizer_interface.h  (+17 more)
src/web_service/: CMakeLists.txt  announce_room_json.cpp  announce_room_json.h  telemetry_json.cpp  telemetry_json.h  verify_login.cpp  verify_login.h  verify_user_jwt.cpp  verify_user_jwt.h  web_backend.cpp  web_backend.h  web_result.h
src/yuzu/: CMakeLists.txt  Info.plist  about_dialog.cpp  about_dialog.h  aboutdialog.ui  bootmanager.cpp  bootmanager.h  check_vulkan.cpp  check_vulkan.h  citra-qt.rc  compatdb.cpp  compatdb.h  compatdb.ui  compatibility_list.cpp  discord_impl.cpp  discord_impl.h  game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  game_list_worker.h  hotkeys.cpp  hotkeys.h  install_dialog.cpp  install_dialog.h  loading_screen.cpp  loading_screen.h  loading_screen.ui  main.cpp  main.h  main.ui  mini_dump.cpp  mini_dump.h  play_time.cpp  play_time.h  play_time_manager.cpp  play_time_manager.h  qt_common.cpp  qt_common.h  startup_checks.cpp  (+9 more)
src/yuzu_cmd/: CMakeLists.txt  config.cpp  config.h  default_ini.h  sdl_config.cpp  yuzu.cpp  yuzu.rc
src/yuzu_tester/: CMakeLists.txt  config.cpp  config.h  default_ini.h  yuzu.cpp  yuzu.rc
(+3261 files in other folders)
